tests/baselines/reference/ES5SymbolProperty7(target=es2015).errors.txt
ES5SymbolProperty7.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: any; }'.


==== ES5SymbolProperty7.ts (1 errors) ====
    var Symbol: { iterator: any };
        ~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: any; }'.
!!! related TS6203 lib.es2015.symbol.d.ts:--:--: 'Symbol' was also declared here.
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator]